<resources>
    <string name="app_name">Saifu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_buy">購入</string>
    <string name="btn_transfer">振替</string>
    <string name="btn_search">検索</string>
    <string name="btn_stat">統計</string>
    <string name="btn_account">開設</string>
    <string name="btn_update">更新</string>
    <string name="btn_history">履歴</string>
    <string name="btn_ok">OK</string>
    <string name="hnt_money">金額</string>
    <string name="hnt_account">口座名</string>
    <string name="lbl_money">999,999,999円</string>
    <string name="lbl_account">何かしらの口座</string>
    <string name="lbl_unselected">未選択</string>
    <string name="lbl_transfer">999,999,999円（XXX⇒XXX）</string>
    <string name="btn_ym">%04d/%02d</string>
    <string name="btn_ymd">%04d/%02d/%02d</string>
    <string name="btn_ymd_from">From：%04d/%02d/%02d</string>
    <string name="btn_ymd_to">To：%04d/%02d/%02d</string>
    <string name="btn_add">追加</string>
    <string name="btn_detail">口座別検索</string>
</resources>